White space Bug on Mozilla

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -6,6 +6,7 @@ body {
   --primary-color: #E60000;
   --secondary-color: #020203;
   --tertiary-color: #FBFBFB;
+  overflow: hidden;
 }
 
 code {
